# DeepCareer

./: .env.example  .gitignore  .python-version  Dockerfile  README.md  README_EN.md  TECHNICAL.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
backend/: __init__.py  cli.py  config.py  main.py
backend/agents/: __init__.py  job_matcher.py  reasoning_agent.py  resume_analyzer.py  search_strategy.py
backend/api/: __init__.py  analytics.py  crawler.py  feedback.py  job_v2.py  match_v2.py  resume.py  resume_v2.py  search.py  smart_match.py
backend/crawlers/: __init__.py  base_crawler.py  boss_web_crawler_playwright.py
backend/database/: __init__.py  connection.py
backend/models/: __init__.py  feedback.py  job_v2.py  match_record.py  resume_v2.py  search_history.py
backend/schemas/: __init__.py  feedback.py  resume.py  search.py
backend/services/: __init__.py  cache_service.py  extractor_service.py  feedback_learner.py  matcher_service.py  openai_service.py  resume_parser.py
backend/utils/: local_embedding.py  logger.py  resume_parser.py  smart_matcher.py
database/: init_db.sql  migrate_vector_384.sql  schema_v2.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/api/: index.js
frontend/src/assets/: Logo.jsx
frontend/src/components/: Layout.jsx
frontend/src/pages/: Crawler.jsx  Home.jsx  Jobs.jsx  (+3 more)
test_reports/: test_report_20251225_112941.html  test_report_20251225_112957.html  test_report_20251225_113207.html  test_report_20251225_113501.html  test_report_latest.html
(+1 files in other folders)
